# canva-workshop

./: README.md  pyproject.toml
data/ghed/: README.md  che.csv  dis1.csv  dis11.csv  dis12.csv  dis13.csv  dis16.csv  dis192.csv  dis2.csv  dis3.csv  dis4.csv  dis5.csv  disnec.csv  ext.csv  gghed.csv  hf3.csv  pvtd.csv
data/hiv/: README.md  aids_orphans.csv  deaths_averted_due_to_art.csv  hiv_testing_pregnant_women.csv  new_hiv_infections_averted_pmtct.csv  people_on_art.csv
data/pov/: README.md  SI.POV.DDAY.csv  SI.POV.LMIC.csv  SI.POV.NAHC.csv  SI.POV.UMIC.csv  SP.POP.TOTL.csv
data/preformatted_data/: flourish-bar-chart-race_dis1.csv  flourish-projection-map_aids_mortality_per_1000_population .csv
data/wfp/: README.md  food_security_national.csv
src/: config.py  ghed.py  pov.py  unaids.py  wfp.py
